test/y_error_14.j.gold
test/y_error_14.j:12:19: error: duplicate parameter 'a' in method declaration
    |
 12 |     Int foo(Int a, Int a)
    |                   ^
