test/y_error_14.j
class UWU
{
	Void main()
	{
		Int a;
		a = new A().foo(69, 420);
	}
}

class A
{
	Int foo(Int a, Int a)
	{
		return a;
	}
}
